# FunnyBoi

./: .gitmodules  CMakeLists.txt  token.txt
.github/workflows/: c-cpp.yml  cmake.yml
FunnyBoi/: CMakeLists.txt
FunnyBoi/src/: FunnyBoi.cpp  FunnyBoi.h
